--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -15,3 +15,6 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_PROJECTS: "False"
+          SHOW_SHORT_INFO: "False"
+          SHOW_UPDATED_DATE: "False"
+          SHOW_LINES_OF_CODE: "True"
