--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -14,7 +14,27 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SECTION_NAME: "waka"
+          SECTION_NAME: waka-chip
+          SHOW_PROJECTS: "False"
+          SHOW_SHORT_INFO: "False"
+          SHOW_UPDATED_DATE: "False"
+          SHOW_PROFILE_VIEWS: "True"
+          SHOW_LINES_OF_CODE: "True"
+          SHOW_TOTAL_CODE_TIME: "True"
+          SHOW_LOC_CHART: "False"
+          SHOW_COMMIT : "False"
+          SHOW_DAYS_OF_WEEK: "False"
+          SHOW_LANGUAGE: "False"
+          SHOW_OS: "False"
+          SHOW_TIMEZONE: "False"
+          SHOW_EDITORS: "False"
+          SHOW_LANGUAGE_PER_REPO: "False"
+          
+      - uses: anmol098/waka-readme-stats@master
+        with:
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SECTION_NAME: waka
           SHOW_PROJECTS: "False"
           SHOW_SHORT_INFO: "False"
           SHOW_UPDATED_DATE: "False"
